--- a/code/src/Makefile.in
+++ b/code/src/Makefile.in
@@ -170,7 +170,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = protocol common testserver testclient threadpool2 doublequeue
+SUBDIRS = protocol common testserver testclient threadpool2 threadpool3 doublequeue
 all: all-recursive
 
 .SUFFIXES:
