--- a/code/src/threadpool2/Makefile.am
+++ b/code/src/threadpool2/Makefile.am
@@ -1,8 +1,8 @@
 INCLUDES = -I$(top_srcdir)/include
 
-bin_PROGRAMS = $(top_srcdir)/bin/threadpool
-__top_srcdir__bin_threadpool_SOURCES = main.cpp
-__top_srcdir__bin_threadpool_LDADD = $(top_srcdir)/lib/libcommon.la
+bin_PROGRAMS = $(top_srcdir)/bin/threadpool2
+__top_srcdir__bin_threadpool2_SOURCES = main.cpp
+__top_srcdir__bin_threadpool2_LDADD = $(top_srcdir)/lib/libcommon.la
 
 LIBS += -g
 
